samples/_failures_safe/1761367957_428e19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53f8828f.c: In function ‘main’:
./samples/SAFE/__tmp_53f8828f.c:158:32: error: expected ‘)’ at end of input
  158 |     if (scanf("%d", &start_node
      |              ~                 ^
      |                                )
./samples/SAFE/__tmp_53f8828f.c:158:5: error: expected declaration or statement at end of input
  158 |     if (scanf("%d", &start_node
      |     ^~
